Header collapsed instead of the Top Bar #62425

Closed
opened 2019-03-10 19:06:29 +01:00 by Arye Ramaty · 16 comments
Contributor

System Information
Operating system: Windows
Graphics card: Nvidia 1050

Blender Version
version: 2.80 (sub 47), branch: blender2.7, commit date: 2019-03-08 21:52, hash: a0f2923fd8, type: Release
build date: 08/03/2019, 17:04

Short description of error
Header disappear when the: Blender Preference -> Interface -> Display -> Scale Resolution/ Line Width are different from the default setting (in some value like :[1.68,Thik] , [1.86,auto])
*Just when the topbar collapsed, for instance, in the shading workspace.
Exact steps for others to reproduce the error
Based on the default startup.

**System Information** Operating system: Windows Graphics card: Nvidia 1050 **Blender Version** version: 2.80 (sub 47), branch: blender2.7, commit date: 2019-03-08 21:52, hash: a0f2923fd821, type: Release build date: 08/03/2019, 17:04 **Short description of error** Header disappear when the: Blender Preference -> Interface -> Display -> Scale Resolution/ Line Width are different from the default setting (in some value like :[1.68,Thik] , [1.86,auto]) *Just when the topbar collapsed, for instance, in the shading workspace. **Exact steps for others to reproduce the error** Based on the default startup.
Author
Contributor

Added subscriber: @aryeramaty

Added subscriber: @aryeramaty
Author
Contributor

*When on thick line, the Header collapse regardless of the scale resolution.
*When on thin line, the Header collapse just when the scale resolution is under 1.
*When on auto line, the Header collapse when the scale resolution is smaller than 1 and in the range between 1.77 and 1.99.

*When on thick line, the Header collapse regardless of the scale resolution. *When on thin line, the Header collapse just when the scale resolution is under 1. *When on auto line, the Header collapse when the scale resolution is smaller than 1 and in the range between 1.77 and 1.99.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Can you provide some clear steps to reproduce the issue, as well as a more clear explanation of the resulting issue?

Can you provide some clear steps to reproduce the issue, as well as a more clear explanation of the resulting issue?
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

And maybe make a short screen recording that shows the issue.

And maybe make a short screen recording that shows the issue.
Author
Contributor

I add the "steps to reproduce" in the description section by mistake.
This steps:
When Blender Preference -> Interface -> Display -> Scale Resolution/ Line Width are different from the default setting (in some value like :[1.68,Thik] , [1.86,auto]) and the topbar collapsed, for instance, in the shading workspace.

Description:
The Header (where you can find the File,Edit, Help, Etc) been collapsed. instead of the topbar (the tools settings)

I add the "steps to reproduce" in the description section by mistake. This steps: When Blender Preference -> Interface -> Display -> Scale Resolution/ Line Width are different from the default setting (in some value like :[1.68,Thik] , [1.86,auto]) and the topbar collapsed, for instance, in the shading workspace. Description: The Header (where you can find the File,Edit, Help, Etc) been collapsed. instead of the topbar (the tools settings)

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1

What do you mean by "the topbar collapsed"? Do you have an image or screen recording of the issue?

What do you mean by *"the topbar collapsed"*? Do you have an image or screen recording of the issue?
Author
Contributor

Maybe "collapsed" isn't the right word. Sorry English isn't my native language...1552307082600876338806.jpg

Maybe "collapsed" isn't the right word. Sorry English isn't my native language...![1552307082600876338806.jpg](https://archive.blender.org/developer/F6801236/1552307082600876338806.jpg)
Author
Contributor

As you can see(or not) The Header disappeared.

1552307165260249978184.jpg

1552307299369-778915995.jpg

As you can see(or not) The Header disappeared. ![1552307165260249978184.jpg](https://archive.blender.org/developer/F6801245/1552307165260249978184.jpg) ![1552307299369-778915995.jpg](https://archive.blender.org/developer/F6801252/1552307299369-778915995.jpg)
Author
Contributor

Maybe "colsed down" is the right term

Maybe "colsed down" is the right term

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Yeah, I see what you mean...

Thick.PNG Auto.PNG
Yeah, I see what you mean... | ![Thick.PNG](https://archive.blender.org/developer/F6801541/Thick.PNG) | ![Auto.PNG](https://archive.blender.org/developer/F6801542/Auto.PNG) | | -- | -- |

This issue was referenced by f3a3d74bcf

This issue was referenced by f3a3d74bcfb0d7a5af1320b9398cddcb4d0d9f9b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62425
No description provided.