Fix T62425: topbar showing wrong buttons at some UI scales.