source/blender/editors/screen/screen_edit.c
@@ -794,10 +794,15 @@ static void screen_global_area_refresh(
 	}
 }
 
+static int screen_global_header_size(void)
+{
+	return (int)ceilf(ED_area_headersize() / UI_DPI_FAC);
+}
+
 static void screen_global_topbar_area_refresh(wmWindow *win, bScreen *screen)
 {
-	const short size_min = HEADERY;
-	const short size_max = 2.25 * HEADERY;
+	const short size_min = screen_global_header_size();
+	const short size_max = 2.25 * screen_global_header_size();
 	const short size = (screen->flag & SCREEN_COLLAPSE_TOPBAR) ? size_min : size_max;
 	rcti rect;
 
@@ -810,7 +815,7 @@ static void screen_global_topbar_area_refresh(wmWindow *win, bScreen *screen)
 static void screen_global_statusbar_area_refresh(wmWindow *win, bScreen *screen)
 {
 	const short size_min = 1;
-	const short size_max = 0.8f * HEADERY;
+	const short size_max = 0.8f * screen_global_header_size();
 	const short size = (screen->flag & SCREEN_COLLAPSE_STATUSBAR) ? size_min : size_max;
 	rcti rect;
 
